# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2011-11-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add HTTP headers to the request_info
    * Add loglevel_set to the CloudI Job API, to dynamically change the loglevel
    * Fix a JSON-RPC protocol version problem

2011-11-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add priorities to CloudI messages
    * Add both request_info and response_info to CloudI messages (not yet used)
    * Fix a bug with C/C++ CloudI API data handling

2011-11-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the CloudI logger work with logrotate without special configuration
    * Prevent any services from flooding the CloudI logger
    * Fix ACL allow/deny for complex destinations
    * Make HTTP method suffixes on service destinations on by default

2011-09-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.8 (alpha) released

2011-08-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * http_req test now includes Java, Ruby, Python implementations
      (in addition to the C implementation)
    * C/C++, Java, Python, Ruby CloudI API includes the
      request_http_qs_parse function for storing the parsed HTTP query string

2011-08-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * http_req C test now handles query strings
    * All requests and responses now have a terminating null ('\0')
      character that is not included in their length, so that it is
      easier to use C string functions without errors

2011-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * rebar/reltool bug fixed for Erlang R14B03

2011-06-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.7 (alpha) released
    * autoconf build system bug fixed
    * Updated FAQ documentation

2011-05-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.1.6 (alpha) released