@@ -228,6 +228,12 @@
         5000, 5000, 5000, [api], undefined, 1, 1, 5, 300},
     {internal,
         "/tests/http_req/",
+        cloudi_job_http_req,
+        [],
+        none,
+        5000, 5000, 5000, [api], undefined, 1, 5, 300},
+    {internal,
+        "/tests/http_req/",
         cloudi_job_filesystem,
         [{directory, "tests/http_req/public_html/"}],
         none,
