@@ -122,6 +122,7 @@ AC_CONFIG_FILES([cloudi.conf
                  tests/http_req/org/cloudi/Makefile
                  tests/http_req/org/cloudi/tests/Makefile
                  tests/http_req/org/cloudi/tests/http_req/Makefile
+                 tests/http_req/src/Makefile
                  tests/flood/Makefile
                  tests/flood/src/Makefile
                  tests/flood/service/Makefile
