@@ -1,0 +1,103 @@
+%%% -*- coding: utf-8; Mode: erlang; tab-width: 4; c-basic-offset: 4; indent-tabs-mode: nil -*-
+%%% ex: set softtabstop=4 tabstop=4 shiftwidth=4 expandtab fileencoding=utf-8:
+%%%
+%%%------------------------------------------------------------------------
+%%% @doc
+%%% ==CloudI Work Module For http_req Test==
+%%% @end
+%%%
+%%% BSD LICENSE
+%%% 
+%%% Copyright (c) 2011, Michael Truog <mjtruog at gmail dot com>
+%%% All rights reserved.
+%%% 
+%%% Redistribution and use in source and binary forms, with or without
+%%% modification, are permitted provided that the following conditions are met:
+%%% 
+%%%     * Redistributions of source code must retain the above copyright
+%%%       notice, this list of conditions and the following disclaimer.
+%%%     * Redistributions in binary form must reproduce the above copyright
+%%%       notice, this list of conditions and the following disclaimer in
+%%%       the documentation and/or other materials provided with the
+%%%       distribution.
+%%%     * All advertising materials mentioning features or use of this
+%%%       software must display the following acknowledgment:
+%%%         This product includes software developed by Michael Truog
+%%%     * The name of the author may not be used to endorse or promote
+%%%       products derived from this software without specific prior
+%%%       written permission
+%%% 
+%%% THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
+%%% CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+%%% INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+%%% OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+%%% DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+%%% CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+%%% SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+%%% BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+%%% SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+%%% INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+%%% WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+%%% NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+%%% OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+%%% DAMAGE.
+%%%
+%%% @author Michael Truog <mjtruog [at] gmail (dot) com>
+%%% @copyright 2011 Michael Truog
+%%% @version 0.1.9 {@date} {@time}
+%%%------------------------------------------------------------------------
+
+-module(cloudi_job_http_req).
+-author('mjtruog [at] gmail (dot) com').
+
+-behaviour(cloudi_job).
+
+%% cloudi_job callbacks
+-export([cloudi_job_init/3,
+         cloudi_job_handle_request/10,
+         cloudi_job_handle_info/3,
+         cloudi_job_terminate/2]).
+
+-include("cloudi_logger.hrl").
+
+-record(state, {}).
+
+%%%------------------------------------------------------------------------
+%%% External interface functions
+%%%------------------------------------------------------------------------
+
+
+%%%------------------------------------------------------------------------
+%%% Callback functions from cloudi_job
+%%%------------------------------------------------------------------------
+
+cloudi_job_init(_Args, _Prefix, Dispatcher) ->
+    cloudi_job:subscribe(Dispatcher, "erlang.xml/get"),
+    {ok, #state{}}.
+
+cloudi_job_handle_request(_Type, _Name, _RequestInfo, Request,
+                          _Timeout, _Priority, _TransId, _Pid,
+                          State, _Dispatcher) ->
+    HttpQS = cloudi_job:request_http_qs_parse(Request),
+    Response = case dict:find(<<"value">>, HttpQS) of
+        {ok, RawValue} ->
+            Value = erlang:list_to_integer(erlang:binary_to_list(RawValue)),
+            erlang:list_to_binary(string2:format(
+                "<http_test><value>~w</value></http_test>", [Value]
+            ));
+        error ->
+            <<"<http_test><error>no value specified</error></http_test>">>
+    end,
+    {reply, Response, State}.
+
+cloudi_job_handle_info(Request, State, _) ->
+    ?LOG_WARN("Unknown info \"~p\"", [Request]),
+    {noreply, State}.
+
+cloudi_job_terminate(_, #state{}) ->
+    ok.
+
+%%%------------------------------------------------------------------------
+%%% Private functions
+%%%------------------------------------------------------------------------
+
